add repository and start script to package.json

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
     </div>
     <h2 class="secondary-title">Example Output:</h2>
     <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
-    <p>by <span><a href="https://github.com/Moe95524/Timestamp-Microservice">Mohammed Alhashim</a></span></p>
+    <p>by <span><a href="https://github.com/Moe95524/Timestamp-Microservice" target="_blank">Mohammed Alhashim</a></span></p>
 
 </body>
 </html>
