--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <h2 class="secondary-title">Example Usage:</h2>
     <div class="first-links">
         <a class="link" href="api/2021-8-23">[my project url]/api/2021-8-23</a>
-        <a class="link" href="api/2021-8-23">[my project url]/api/1451001600000</a>
+        <a class="link" href="api/1451001600000">[my project url]/api/1451001600000</a>
     </div>
     <h2 class="secondary-title">Example Output:</h2>
     <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
